[gd_scene load_steps=16 format=3 uid="uid://b0iepkib1grct"]

[ext_resource type="Texture2D" uid="uid://dfcih1gxys0g0" path="res://assets/player/player.png" id="1_0axhn"]
[ext_resource type="Script" path="res://levelBase/playerCam/player/player.gd" id="1_tsk0m"]
[ext_resource type="PackedScene" uid="uid://dhqfdhmsu2qyd" path="res://shooter.tscn" id="3_mxypt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kdhr"]
size = Vector2(13, 17)

[sub_resource type="Animation" id="Animation_eyvuq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_aswiq"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [18]
}

[sub_resource type="Animation" id="Animation_f7nu5"]
resource_name = "hurt"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [11, 12]
}

[sub_resource type="Animation" id="Animation_juj4d"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}

[sub_resource type="Animation" id="Animation_0lsos"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_3thhd"]
resource_name = "run"
length = 0.4
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q15v7"]
_data = {
"RESET": SubResource("Animation_eyvuq"),
"fall": SubResource("Animation_aswiq"),
"hurt": SubResource("Animation_f7nu5"),
"idle": SubResource("Animation_juj4d"),
"jump": SubResource("Animation_0lsos"),
"run": SubResource("Animation_3thhd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcr4q"]
size = Vector2(12, 21)

[sub_resource type="Animation" id="Animation_qpar0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_scg0f"]
resource_name = "invincible"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tgoj2"]
_data = {
"RESET": SubResource("Animation_qpar0"),
"invincible": SubResource("Animation_scg0f")
}

[node name="player" type="CharacterBody2D" groups=["player"]]
collision_layer = 32
script = ExtResource("1_tsk0m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-1, -1)
texture = ExtResource("1_0axhn")
hframes = 19
frame = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5.5)
shape = SubResource("RectangleShape2D_3kdhr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q15v7")
}
autoplay = "idle"

[node name="soundPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -32.378

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-1, 4.5)
shape = SubResource("RectangleShape2D_xcr4q")

[node name="shooter" parent="." instance=ExtResource("3_mxypt")]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tgoj2")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="hurt_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
